--- a/my_design/config.json
+++ b/my_design/config.json
@@ -1,35 +1,21 @@
 {
-    "//": "Basics",
-    "DESIGN_NAME": "my_design",
-    "VERILOG_FILES": "dir::src/*.v",
-    "CLOCK_PERIOD": 10,
-    "CLOCK_PORT": "clk",
-    "PNR_SDC_FILE": "dir::src/my_design.sdc",
-    "SIGNOFF_SDC_FILE": "dir::src/my_design.sdc",
-    "PL_RANDOM_GLB_PLACEMENT": true,
-    "FP_SIZING": "absolute",
-    "DIE_AREA": "0 0 30 30",
-    "PL_TARGET_DENSITY": 0.75,
-    "FP_PDN_AUTO_ADJUST": false,
-    "FP_PDN_VPITCH": 10,
-    "FP_PDN_HPITCH": 10,
-    "FP_PDN_VOFFSET": 2,
-    "FP_PDN_HOFFSET": 2,
-    "DIODE_INSERTION_STRATEGY": 3,
-
-    "//": "Pin Order",
-    "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
-
-    "//": "Technology-Specific Configs",
-    "pdk::sky130*": {
-        "FP_CORE_UTIL": 30,
-        "CLOCK_PERIOD": 10,
-        "scl::sky130_fd_sc_hs": {
-            "CLOCK_PERIOD": 8
-        },
-        "scl::sky130_fd_sc_ls": {
-            "MAX_FANOUT_CONSTRAINT": 5
-        }
-    }
+  "DESIGN_NAME": "my_design",
+  "VERILOG_FILES": "dir::src/*.v",
+  "CLOCK_TREE_SYNTH": false,
+  "CLOCK_PORT": null,
+  "PL_RANDOM_GLB_PLACEMENT": true,
+  "FP_SIZING": "absolute",
+  "DIE_AREA": "0 0 150 150",
+  "PL_TARGET_DENSITY": 0.75,
+  "FP_PDN_AUTO_ADJUST": false,
+  "FP_PDN_VPITCH": 25,
+  "FP_PDN_HPITCH": 25,
+  "FP_PDN_VOFFSET": 5,
+  "FP_PDN_HOFFSET": 5,
+  "DIODE_INSERTION_STRATEGY": 3,
+  "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
+  "pdk::sky130*": {
+    "FP_CORE_UTIL": 45
+  }
 }
 
